# django-snapadmin

./: .gitignore  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  Dockerfile  MIGRATING.md  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TODO.md  conftest.py  dist.env  docker-compose.traefik.local.yml  docker-compose.traefik.prod.yml  docker-compose.traefik.yml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt  verify_widget.py
.github/workflows/: github-release.yml  publish.yml  test.yml
api/: __init__.py  admin.py  apps.py  authentication.py  models.py  serializers.py  tasks.py  urls.py  views.py
demo/: README.md  admin.py  dist.env  docker-compose.traefik.local.yml  docker-compose.traefik.prod.yml  docker-compose.traefik.yml  docker-compose.yml  manage.py  models.py  requirements.txt  search.py  tasks.py  views.py
demo/app/: admin.py  apps.py  managed_settings.py  models.py  search.py  tasks.py  views.py
demo/app/management/commands/: seed_demo.py  seed_large.py  sync_exchange_rates.py
demo/app/templates/demo/: landing.html  product_list.html
demo/apps/shop/: apps.py  export_sources.py  managed_settings.py  models.py  search.py  tasks.py  views.py
demo/apps/shop/management/commands/: benchmark_list_view.py  seed_demo.py  seed_large.py  sync_exchange_rates.py
demo/apps/shop/migrations/: 0002_exchangerate_last_seen.py
demo/core/: asgi.py  celery.py  settings.py  settings_test.py  urls.py  wsgi.py
demo/management/commands/: benchmark_list_view.py  seed_demo.py  seed_large.py  sync_exchange_rates.py
demo/migrations/: 0001_initial.py  0002_alter_showcase_file_field.py  0003_showcase_color_field_showcase_phone_field_and_more.py  0004_auditlog_alter_showcase_color_field_and_more.py  0005_alter_showcase_color_field_alter_showcase_file_field_and_more.py  0006_exchangerate.py
demo/scripts/: docker_build.sh  docker_retention.py
demo/templates/demo/: dashboard.html
docs/: index.html
docs/migrations/: 0.0.x_to_0.1.x.md  0.1.0a10_to_0.1.0a11.md  0.1.0a11_to_0.1.0a12.md  0.1.0a11_to_0.1.0b1.md  README.md  drofji-automatically-django-admin_to_django-snapadmin.md
docs/releases/: 0.1.0a10.txt  0.1.0a11.txt  0.1.0a7.txt  0.1.0a8.txt  0.1.0a9.txt  0.1.0b1.txt  0.1.0b2.txt  0.1.0b3.txt  0.1.0b4.txt  0.1.0b5.txt  Unreleased.txt
my-project/: pyproject.toml
my-project/sandbox/: asgi.py  settings.py
my-project/snapadmin/: fields.py  models.py  validators.py
my-project/snapadmin/static/snapadmin/css/: admin.css
sandbox/: celery.py  settings.py  settings_test.py  urls.py
scripts/: docker_build.sh  docker_retention.py
snapadmin/: __init__.py  admin.py  apps.py  audit.py  backup.py  checks.py  db.py  etl.py  exporting.py  extra_settings_admin.py  fields.py  health.py  licensing.py  logging_config.py  masking.py  middleware.py  models.py  monitoring.py  nesting.py  pagination.py  reindexing.py  sanitize.py  sso.py  tasks.py  urls.py  validators.py  views.py  widgets.py
snapadmin/api/: authentication.py  exports.py  filters.py  graphql.py  health.py  offline.py  reindex.py  serializers.py  sw_view.py  tasks.py  users.py  views.py
snapadmin/diagnostics/: __init__.py  api.py  database.py  elasticsearch.py  features.py  graphql.py  inventory.py  registry.py  render.py  runtime.py  version.py
snapadmin/integrate/: __init__.py  __main__.py  cli.py  detect.py  report.py  steps.py
snapadmin/locale/de/LC_MESSAGES/: django.mo  django.po
snapadmin/locale/de_CH/LC_MESSAGES/: django.mo  django.po
snapadmin/locale/en/LC_MESSAGES/: django.mo  django.po
snapadmin/locale/es/LC_MESSAGES/: django.mo  django.po
snapadmin/locale/fr/LC_MESSAGES/: django.mo  django.po
snapadmin/locale/fr_CH/LC_MESSAGES/: django.mo  django.po
snapadmin/locale/it/LC_MESSAGES/: django.mo  django.po
snapadmin/locale/nl/LC_MESSAGES/: django.mo  django.po
snapadmin/locale/pl/LC_MESSAGES/: django.mo  django.po
snapadmin/locale/ru/LC_MESSAGES/: django.mo  django.po
snapadmin/management/commands/: db_backup.py  purge_expired_data.py  send_error_digest.py  snapadmin_audit_export.py  snapadmin_health_alert.py  snapadmin_info.py  snapadmin_license_check.py  snapadmin_reindex.py
snapadmin/migrations/: 0001_initial.py  0002_hash_api_token_key.py  0002_snapexportjob_cursor_bytes_snapexportjob_cursor_pk_and_more.py  0003_errorevent.py  0003_snapreindexjob.py  0004_alter_apitoken_options.py  0004_snapexportjob_source.py  0005_snapadminauditlog.py  0006_snapexportjob.py
snapadmin/quickstart/: __init__.py  __main__.py  cli.py  config.py  extract.py  fetch.py  run.py  wizard.py
snapadmin/static/snapadmin/css/: admin-unfold.css  admin.css
snapadmin/static/snapadmin/js/: admin.js  connectivity.js  jquery_bridge.js  model_selector.js  offline.js  sw.js
snapadmin/templates/snapadmin/: dashboard.html  language_switcher.html  sso_buttons.html
snapadmin/templates/snapadmin/email/: error_alert.html  error_alert.txt  error_digest.html  error_digest.txt  health_alert.html  health_alert.txt
snapadmin/templates/snapadmin/widgets/: smart_model_selector.html
templates/admin/: index.html
tests/: conftest.py  test_accessibility.py  test_admin_site.py  test_alpha4_features.py  test_api_token.py  test_api_token_hashing.py  test_api_token_validation.py  test_audit_trail.py  test_backup.py  test_checks.py  test_dashboard.py  test_dashboard_extended.py  test_data_retention.py  test_diagnostics.py  test_diagnostics_api.py  test_diagnostics_database.py  test_diagnostics_elasticsearch.py  test_diagnostics_features.py  test_diagnostics_graphql.py  test_diagnostics_inventory.py  test_diagnostics_runtime.py  test_docker_retention.py  test_ecosystem_compat.py  test_error_monitoring.py  test_es_aggregate.py  test_es_client_config.py  test_es_count.py  test_es_db_fallback.py  test_es_filter.py  test_es_hardening.py  test_es_query_routing.py  test_es_queryset.py  test_es_scan.py  test_etl.py  test_export.py  test_extra_settings_admin.py  test_extra_settings_sync.py  test_fields.py  test_final_coverage.py  test_graphql.py  (+47 more)
(+1 files in other folders)
