[tool.poetry]
name = "django-snapadmin"
version = "0.1.0a2"
description = "Declarative Django admin + REST API + GraphQL auto-generation from model definitions."
authors = ["Alexander Wiese"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/drofji/django-snapadmin"
repository = "https://github.com/drofji/django-snapadmin"
keywords = ["django", "admin", "rest-api", "graphql", "elasticsearch", "unfold", "declarative"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
]

packages = [{include = "snapadmin"}]

include = [
    "snapadmin/templates/**/*",
    "snapadmin/static/**/*",
]

[tool.poetry.dependencies]
python = ">=3.10"
Django = ">=5.2"
django-admin-rangefilter = ">=0.13.3"
django-unfold = ">=0.40.0"
django-ckeditor-5 = ">=0.0.12"
django-admin-autocomplete-filter = ">=0.7.1"
django-extra-settings = ">=0.12.0"
djangorestframework = ">=3.15.0"
drf-spectacular = ">=0.27.0"
django-filter = ">=24.0"
structlog = ">=24.1.0"
colorama = ">=0.4.6"
graphene-django = ">=3.2.0"

# Optional: Elasticsearch integration (required when ELASTICSEARCH_ENABLED=True)
elasticsearch = {version = ">=8.0.0", optional = true}

# Optional: Celery background tasks (required for Celery Beat schedules)
celery = {version = ">=5.3.0", optional = true}
django-celery-beat = {version = ">=2.6.0", optional = true}
django-celery-results = {version = ">=2.5.0", optional = true}

[tool.poetry.extras]
elasticsearch = ["elasticsearch"]
celery = ["celery", "django-celery-beat", "django-celery-results"]
all = ["elasticsearch", "celery", "django-celery-beat", "django-celery-results"]

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
flake8 = "^7.0.0"
pytest = "^8.0.0"
pytest-django = "^4.8.0"
pytest-cov = "^5.0.0"
faker = "^25.0.0"
# Dev extras (installed via requirements.txt in sandbox)
elasticsearch = ">=8.0.0"
celery = ">=5.3.0"
django-celery-beat = ">=2.6.0"
django-celery-results = ">=2.5.0"
redis = ">=5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
