[tool.poetry]
name = "django-snapadmin"
version = "0.1.0b3"
description = "Define your Django models once — instantly get an admin panel, REST API, GraphQL and full-text search. Zero boilerplate."
authors = ["Alexander Wiese"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/drofji/django-snapadmin"
repository = "https://github.com/drofji/django-snapadmin.git"
documentation = "https://drofji.github.io/django-snapadmin/"
keywords = ["django", "admin", "rest-api", "graphql", "elasticsearch", "unfold", "declarative"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
]

packages = [{include = "snapadmin"}]

include = [
    "snapadmin/templates/**/*",
    "snapadmin/static/**/*",
    "snapadmin/locale/**/*",
    "docs/releases/**/*.txt",
    "docs/migrations/**/*.md",
    { path = "CHANGELOG.md", format = ["sdist", "wheel"] },
    { path = "THIRD_PARTY_NOTICES.md", format = ["sdist", "wheel"] },
    { path = "SECURITY.md", format = ["sdist"] },
]

# Extra links shown in the PyPI sidebar ("Project links"). `homepage`, `repository` and
# `documentation` above already render as Homepage / Repository / Documentation; this table
# adds the ones Poetry has no dedicated key for.
[tool.poetry.urls]
Issues = "https://github.com/drofji/django-snapadmin/issues"
Releases = "https://github.com/drofji/django-snapadmin/releases"
Changelog = "https://github.com/drofji/django-snapadmin/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = ">=3.10"
Django = ">=5.2"
django-admin-rangefilter = ">=0.13.3"
django-unfold = ">=0.40.0"
djangorestframework = ">=3.15.0"
drf-spectacular = ">=0.27.0"
django-filter = ">=24.0"
structlog = ">=24.1.0"
colorama = ">=0.4.6"
graphene-django = ">=3.2.0"
nh3 = ">=0.2.0"

# Optional: Elasticsearch integration (required when ELASTICSEARCH_ENABLED=True)
elasticsearch = {version = ">=8.0.0", optional = true}

# Optional: Celery background tasks (required for Celery Beat schedules)
celery = {version = ">=5.3.0", optional = true}
django-celery-beat = {version = ">=2.6.0", optional = true}
django-celery-results = {version = ">=2.5.0", optional = true}

# Optional: SSH/SFTP offsite backup transport (SNAPADMIN_BACKUP_SFTP_*)
paramiko = {version = ">=3.0.0", optional = true}

# Optional: django-extra-settings — the package core does not use it; it is only
# needed if you want a dynamic key/value Settings model in the admin (as the demo shows).
django-extra-settings = {version = ">=0.12.0", optional = true}

# Optional: wysiwyg rich-text fields (SnapRichTextField / wysiwyg=True). django-ckeditor-5
# bundles CKEditor 5, which is GPL / commercial-licensed — kept out of the core so the
# base package carries no GPL/commercial editor unless you opt into rich-text editing.
django-ckeditor-5 = {version = ">=0.0.12", optional = true}

# Optional: django-admin-autocomplete-filter (LGPL-3.0). The package core does not import
# it — kept out of core so the base tree is strictly permissive (MIT/BSD/Apache). Add it only
# if you want AutocompleteFilter list filters in your own admin.
django-admin-autocomplete-filter = {version = ">=0.7.1", optional = true}

[tool.poetry.extras]
elasticsearch = ["elasticsearch"]
celery = ["celery", "django-celery-beat", "django-celery-results"]
backup = ["paramiko"]
extra-settings = ["django-extra-settings"]
wysiwyg = ["django-ckeditor-5"]
autocomplete-filter = ["django-admin-autocomplete-filter"]
all = ["elasticsearch", "celery", "django-celery-beat", "django-celery-results", "paramiko", "django-extra-settings", "django-ckeditor-5", "django-admin-autocomplete-filter"]

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
flake8 = "^7.0.0"
pytest = "^8.0.0"
pytest-django = "^4.8.0"
pytest-cov = "^5.0.0"
faker = "^25.0.0"
# Dev extras (installed via demo/requirements.txt)
elasticsearch = ">=8.0.0"
celery = ">=5.3.0"
django-celery-beat = ">=2.6.0"
django-celery-results = ">=2.5.0"
redis = ">=5.0.0"
paramiko = ">=3.0.0"
# Demo uses a dynamic Settings model; the package core does not depend on it.
django-extra-settings = ">=0.12.0"
# Demo uses wysiwyg rich-text fields; the package core does not depend on it.
django-ckeditor-5 = ">=0.0.12"
# Listed in the demo project's INSTALLED_APPS; the package core does not import it (LGPL, optional).
django-admin-autocomplete-filter = ">=0.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
